Now able to see files on the ui but visulaization for commits, graph, branches and tags is still missing